--- a/email_subscribe/index.html
+++ b/email_subscribe/index.html
@@ -14,7 +14,7 @@
         <div class="bg-zinc-800 flex flex-col md:flex-row p-2  rounded-2xl">
             <!-- image -->
             <img class="object-fit rounded-xl md:rounded-l-xl h-80 md:h-64 transfer hover:scale-105 hover:rounded-xl md:rounded-r-none "
-                src="C:\Users\shiva\Desktop\mini-projects (3)\mini-projects\email-subscribe\images\image.jpg" alt="" />
+                src="images/image.jpg" alt="" />
             <!-- content -->
             <div class="p-6 md:p-12">
                 <h2 class="font-serif text-xl font-medium text-center md:text-left text-white">Get diet and fitness
